--- a/Profissao_Analista_de_dados_M1_Exercicio.ipynb
+++ b/Profissao_Analista_de_dados_M1_Exercicio.ipynb
@@ -24,7 +24,7 @@
         "\n",
         "# **Módulo** | Python: Variáveis & Tipos de Dados\n",
         "Caderno de **Exercícios**<br>\n",
-        "Professor [André Perez](https://www.linkedin.com/in/andremarcosperez/)\n",
+        "Linkedin [Walisson Carvalho](https://www.linkedin.com/in/wacarv-/)\n",
         "\n",
         "---"
       ]
