--- a/EDA_SQL.ipynb
+++ b/EDA_SQL.ipynb
@@ -117,7 +117,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A \"credito\" foi criada no Aws Athena pelo com o código a seguir:\n",
+        "A \"credito\" foi criada no Aws Athena com o código a seguir:\n",
         "\n",
         "```sql\n",
         "CREATE EXTERNAL TABLE IF NOT EXISTS `default`.`credito` (\n",
