--- a/EDA_SQL.ipynb
+++ b/EDA_SQL.ipynb
@@ -241,7 +241,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Comentário**: Existem valores nulos nas colunas: \"escolaridade, estado_civil e salario_anual\", é um ponto de atenção, pois caso seja feita alguma análise estatísticas com esssa colunas, esses valores precisam ser tratados de alguma forma."
+        "**Comentário**: Existem valores nulos nas colunas: \"escolaridade, estado_civil e salario_anual\", é um ponto de atenção, pois caso seja feita alguma análise estatísticas com essas colunas, esses valores precisam ser tratados de alguma forma."
       ],
       "metadata": {
         "id": "bA5dmvFvnUyV"
